# tree-sitter-uiua

./: .envrc  .gitignore  Cargo.toml  ChangeLog.md  README.md  binding.gyp  flake.nix  grammar.js  package.json  sample.ua  tree-sitter.json
.github/workflows/: ci.yml
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: folds.scm  highlights.scm  indents.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: 001-bughunt01.txt  040-bughunt.txt  array.txt  complex.txt  compound.txt  custom-modifiers.txt  emoji.ua  handle-dollar-string.txt  multilineblock.txt  numerics.txt  switch-functions.txt
